# NeuralFn

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  benchmark_llama_fast.py  debug_moe.json  debug_pt.py  llms-full.txt  llms.txt  neuralfn.db  package.json  pyproject.toml  requirements-full.txt  requirements.txt  start-backend.sh  start-editor.sh  test_mixllama.py  test_moe.py  tmp_templates.py  tmp_update.py  tmp_update_builtins.py  tmp_verify.py  todo-kernels.md  todo-tile-cuda.md  validate_nanogpt.py
.antigravitycli/: b612a519-02cd-4cd1-bdca-b8c0af381d8f.json
.claude/: settings.local.json
.codex/: config.toml
.cursor/: mcp.json
alembic/: env.py
cli/: 5090-llama-baseline.sh  5090-llama-overnight.sh  5090-llama-smoke.sh  5090-mini-run.sh  README.md  cli_utils.py  install.sh  nfn.py  nfn_impl.py  parameter_golf_runtime.py  pyproject.toml
cli/.claude/: settings.local.json
cli/scripts/: eval_llama_fast.py  infer_gpt.py  infer_gpt2.py  infer_jepa_semantic.py  infer_llama_fast.py  infer_llama_megakernel.py  infer_mixllama_fast.py  infer_nanogpt.py  infer_semantic_router_moe.py  native_training_guard.py  train_deepseek_v4.py  train_gpt.py  train_gpt2.py  train_gpt2_evo.py  train_gpt2_native.py  train_gpt_native.py  train_jepa_semantic.py  train_llama_fast.py  train_llama_megakernel.py  train_mixllama_fast.py  train_nanogpt.py  train_semantic_router_moe-overnight.py  train_semantic_router_moe.py
cli/tests/: test_cached_tokenizer_variants.py  test_cli_help_behavior.py  test_dataset_manager_downloads.py  test_infer_megakernel_artifacts.py  test_nfn_cli.py  test_train_drop_last.py  test_train_eval_fallback.py  test_train_evolutionary_flags.py  test_train_finetune_flags.py  test_train_gpt2_native.py  test_train_graph_spec_sanitization.py  test_train_megakernel_flags.py  test_train_pretraining_file_flags.py  test_train_scheduler_flags.py  test_train_tinystories_flags.py
desktop/: electron-builder.yml  main.js  package-lock.json  package.json
docs/: README.md  agent-skills.md  architecture.md  cli.md  getting-started.md  testing.md
editor/: index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.tsbuildinfo
examples/: gpt_graph.py  nested_hybrid_graph.py  xor_graph.py  xor_trained.json
neuralfn/: __init__.py  builtins.py  config.py  evolutionary.py  graph.py  hybrid.py  inference.py  native_cuda_device.py  native_gpt.py  native_gpt2.py  native_train.py  neuron.py  port.py  semantic.py  serialization.py  surrogate.py  torch_backend.py  torch_templates.py  trainer.py
server/: __init__.py  app.py  dataset_manager.py  db.py  db_models.py  dependencies.py  mcp_server.py  models.py  routes.py  security.py  settings.py
tests/: test_adapters.py  test_advanced_templates.py  test_backend_capabilities.py  test_builtin_neurons.py  test_composed_recipes.py  test_dataset_manager_variants.py  test_diffusion.py  test_finetune.py  test_frontier_kernels.py  test_jepa_semantic.py  test_kv_pca.py  test_kv_quant.py  test_layer_evo_gpu.py  test_native_dependencies.py  test_native_gpt2.py  test_nested_graphs.py  test_platform_api.py  test_pt_export.py  test_routing_diagnostics.py  test_seq2seq.py  test_server_dataset_loading.py  test_server_nested_graphs.py  test_template_presets.py  test_tile_cuda_coverage.py  test_tile_cuda_dtypes.py  test_tile_cuda_examples.py  test_tile_cuda_gpu.py  test_tile_cuda_modules.py  test_tile_cuda_ops.py  test_tile_cuda_optimizer.py  test_tile_cuda_registry.py  test_tile_cuda_static_plan.py  test_tokenizer_vocab_contract.py  test_torch_backend_evolutionary.py  test_torch_backend_schedule.py  test_torch_gpt.py
tools/: build_native_gpt2_all.sh  (+29 more)
(+146 files in other folders)
