[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralfn"
version = "0.0.0a0"
description = "Graph-native neural network framework with torch-backed template presets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
  "numpy>=1.24",
  "fastapi>=0.100",
  "uvicorn>=0.23",
  "networkx>=3.0",
  "pydantic>=2.0",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "redis>=5.0",
  "PyMySQL>=1.1",
  "datasets>=2.14",
  "tiktoken>=0.5",
  "python-multipart>=0.0.6",
  "mcp>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["neuralfn*", "server*"]

[tool.setuptools.package-data]
neuralfn = [
  "data/semantic/*.json",
  "data/semantic/*.csv",
]
