[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralfn"
version = "0.0.0a0"
description = "Graph-native neural network framework with torch-backed template presets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "fastapi>=0.100",
  "uvicorn>=0.23",
  "networkx>=3.0",
  "pydantic>=2.0",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "redis>=5.0",
  "PyMySQL>=1.1",
  "datasets>=2.14",
  "tiktoken>=0.5",
  "python-multipart>=0.0.6",
  "mcp>=1.0.0",
]

[project.optional-dependencies]
torch = [
  "torch>=2.0",
]
tile-cuda = [
  "ninja>=1.11",
]

[tool.setuptools.packages.find]
include = ["neuralfn*", "server*"]

[tool.setuptools.package-data]
neuralfn = [
  "csrc/native_gpt2/*.cpp",
  "csrc/native_train/*.cpp",
  "csrc/native_train/*.cu",
  "csrc/native_train/*.h",
  "csrc/tile_cuda/*.cpp",
  "csrc/tile_cuda/*.cu",
  "data/semantic/*.json",
]
