[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralfn"
version = "0.0.0a0"
description = "Graph-native neural network framework with native CUDA trainers and Torch-free default packaging."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
graph = [
  "numpy>=1.24",
  "networkx>=3.0",
]
datasets = [
  "datasets>=2.14",
  "numpy>=1.24",
  "tiktoken>=0.5",
]
server = [
  "alembic>=1.13",
  "fastapi>=0.100",
  "mcp>=1.0.0",
  "networkx>=3.0",
  "numpy>=1.24",
  "pydantic>=2.0",
  "PyMySQL>=1.1",
  "python-multipart>=0.0.6",
  "redis>=5.0",
  "sqlalchemy>=2.0",
  "tiktoken>=0.5",
  "uvicorn>=0.23",
]
tile-cuda = [
  "ninja>=1.11",
]
all = [
  "alembic>=1.13",
  "datasets>=2.14",
  "fastapi>=0.100",
  "mcp>=1.0.0",
  "networkx>=3.0",
  "ninja>=1.11",
  "numpy>=1.24",
  "pydantic>=2.0",
  "PyMySQL>=1.1",
  "python-multipart>=0.0.6",
  "redis>=5.0",
  "sqlalchemy>=2.0",
  "tiktoken>=0.5",
  "uvicorn>=0.23",
]

[tool.setuptools.packages.find]
include = ["neuralfn*", "server*"]

[tool.setuptools.package-data]
neuralfn = [
  "csrc/native_gpt2/*.cpp",
  "csrc/native_train/*.cpp",
  "csrc/native_train/*.cu",
  "csrc/native_train/*.h",
  "csrc/tile_cuda/*.cpp",
  "csrc/tile_cuda/*.cu",
  "data/semantic/*.json",
]
