[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralfn-sdk-harness"
version = "0.0.0"
description = "External SDK harness for training the NeuralFn JEPA Semantic Hybrid."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["rich>=13", "sentencepiece>=0.1.99"]

[project.scripts]
nfn = "nfn:main"

[tool.setuptools]
py-modules = ["cli_utils", "nfn", "nfn_impl", "parameter_golf_runtime"]
